# coffee

./: .env.example  .pre-commit-config.yaml  DESIGN_SYSTEM.md  Makefile  README.md  UI_REDESIGN.md  aeropress.data.csv.bkp  alembic.ini  constants.py  docker-compose.yml  index.html  optimize.py  pourover.meta.csv  pyproject.toml  requirements.txt  utils.py  wrangler.toml
.github/workflows/: ci.yml  deploy-cloudflare-pages.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_interactive_platform.py
backend/app/: main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routers/: auth.py  brews.py  interactive_optimizer.py  leaderboard.py  optimization.py
backend/app/config/: settings.py
backend/app/core/: errors.py  logging.py
backend/app/db/: session.py
backend/app/models/: __init__.py  domain.py  persistence.py
backend/app/repositories/: csv_repository.py
backend/app/schemas/: auth.py  brew.py  interactive_optimizer.py  leaderboard.py  optimization.py
backend/app/services/: auth_service.py  interactive_optimizer.py  optimizer_service.py
backend/data/: aeropress.meta.csv
backend/scripts/: populate_db_from_csv.py  start.sh
backend/tests/: conftest.py  test_auth.py  test_health.py  test_leaderboard.py  test_optimization_run.py  test_optimizer.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: architecture.md  migration-notes.md  pourover.md
frontend/: index.html  package.json
frontend/src/: main.tsx
frontend/src/app/: App.tsx  styles.css
frontend/src/components/: AppShell.tsx  icons.tsx
frontend/src/features/auth/: AccountPage.tsx  AuthPage.tsx  authApi.ts
frontend/src/features/leaderboard/: LeaderboardPage.tsx
frontend/src/shared/api/: httpClient.ts
frontend/src/shared/config/: themeStore.ts
legacy/: optimize.py  utils.py
src/coffee_backend/: __init__.py  main.py
src/coffee_backend/api/: deps.py
src/coffee_backend/api/routers/: analytics.py  auth.py  beans.py  brews.py  equipment.py  health.py  import_export.py  methods.py  optimisation.py  recipes.py  users.py
src/coffee_backend/cli/: app.py  db.py
src/coffee_backend/cli/commands/: brews.py  db.py  import_export.py  optimise.py  run.py  users.py
src/coffee_backend/core/: config.py  exceptions.py  logging.py  security.py
src/coffee_backend/db/: session.py
src/coffee_backend/db/migrations/: env.py
src/coffee_backend/db/models/: __init__.py  bean.py  brew.py  common.py  enums.py  equipment.py  method_profile.py  optuna_study.py  rating.py  recipe.py  user.py
src/coffee_backend/schemas/: bean.py  brew.py  common.py  equipment.py  error.py  import_export.py  method_profile.py  optimisation.py  parameter_registry.py  recipe.py  user.py
src/coffee_backend/services/: analytics_service.py  brew_service.py  import_export_service.py  method_profile_service.py  optimisation_service.py  parameter_validation.py  user_service.py
tests/: conftest.py  test_auth.py  test_brews.py  test_config.py  test_db_lifecycle.py  test_health.py  test_import.py  test_methods.py  test_optimisation.py  test_recipe_render.py
web/: app.js  index.html  package.json  styles.css  tailwind.config.ts  tsconfig.app.json  vite.config.ts
web-vanilla/: README.md  app.js  index.html  styles.css
web/data/: aeropress.data.csv
web/public/: _headers
web/public/data/: pourover.data.csv
web/src/: App.tsx  index.css  main.tsx
web/src/components/: AdvancedControls.tsx  BrewInputsCard.tsx  HistoryTable.tsx  OnboardingEmptyState.tsx  PersonsSelector.tsx  RecipeCard.tsx  TopNav.tsx
web/src/lib/: data.ts  optimizer.ts  scoring.ts  types.ts
web/src/routes/: Brew.tsx  History.tsx  Insights.tsx
web/src/services/: brewLogService.test.ts  brewLogService.ts  datasetService.ts  recommendationService.test.ts  recommendationService.ts  types.ts
(+24 files in other folders)
