[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coffee-optimizer-api"
version = "1.0.1"
description = "Production-ready FastAPI backend for coffee recipe optimization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "pandas>=2.2.0",
  "numpy>=2.0.0",
  "optuna>=3.6.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.32",
  "alembic>=1.13.2",
  "psycopg2-binary>=2.9.9",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "email-validator>=2.2.0"
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*"]
exclude = ["data", "data.*", "tests", "tests.*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
